@@ -163,6 +163,11 @@ accepts the following attributes: <br>
 		<td>&nbsp;</td>
 	</tr>
 	<tr>
+		<td><tt>useDefaultListeners</tt></td>
+		<td>Whether the default listeners and reporters should be used.</td>
+		<td>Defaults to true.</td>
+	</tr>
+	<tr>
 		<td><tt>workingDir</tt></td>
 		<td>The directory where the ant task should change to before running 
 		TestNG.</td>
