@@ -6,7 +6,8 @@ TODO
 ===========================================================================
 5.2
 
-Added: EmailableReported (from Paul Mendelson)
+Added: "-usedefaultlisteners true/false" to command line and ant
+Added: EmailableReporter (from Paul Mendelson)
 Added: parallel can now be "methods" or "tests". Boolean version deprecated
 Added: TestNGAntTask now uses the @ syntax to invoke TestNG
 Added: Command line understands @ syntax
